Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.1, 5.1.0
-
Mac OS 10.8.3
-
-
3b992f8319b673495ffc74c65ed6a6761e88913c
Description
Using qt5 on mac all the combo boxes in the signal and slots table of designer cannot be opened (sometime they quickly flash open, but no editing is possible). I suppose this is a general problem.
Attachments
Issue Links
- relates to
-
QTBUG-31298 Mac OSX: No pop-up menus for QLabel alignment options in Property Editor
-
- Closed
-
- replaces
-
QTBUG-30966 Signal/Slot Editor Not Usuable on Mac OS X
-
- Closed
-
-
QTBUG-31848 Q_PROPERTY of type enum without RESET is read only, if using a user defined editor
-
- Closed
-
-
QTCREATORBUG-9215 Can't edit signals/slots in designer
-
- Closed
-