Fix combobox not opening in treeview item delegate editor

This is the same fix as for QTBUG-30715, which leads me to think that
we should spend some more time and re-think how QComboBox gets focus.

See also qtbase 3b992f831.

Task-number: QTBUG-31298
Change-Id: I4393af00c8896051e9ed8b5d8af510633106913c
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>
Reviewed-by: Shawn Rutledge <shawn.rutledge@digia.com>